<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Contains clickable buttons -->

    <TextView
        android:id="@+id/tvMainInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_instruction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bCustomer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_customer"
        android:padding="25dp"
        android:text="@string/customer" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick_waiter"
        android:padding="25dp"
        android:text="@string/waiter" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_kitchen"
        android:padding="25dp"
        android:text="@string/kitchen" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick_manager"
        android:padding="25dp"
        android:text="@string/manager" />

</LinearLayout>