<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManagerActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                        android:id="@+id/bStockLevels"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick_stockLevels"
                android:padding="20dp"
                android:text="@string/stockLevels" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick_editMenu"
                android:padding="20dp"
                android:text="@string/editMenu" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick_ingredients"
                android:padding="20dp"
                android:text="@string/ingredients" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick_settings"
                android:padding="20dp"
                android:text="@string/settings" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>