<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Displays 3 number pickers for use in dialog -->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" 
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:paddingLeft="15dp" >

            <TextView
                android:id="@+id/tvPieSize"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/npOptionSize"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/npPieSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPieCrust"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/npOptionCrust"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/npPieCrust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPieQty"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/npOptionQty"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/npPieQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout3"
        android:text="@string/npPrice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>