<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentContainerMenuIng"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etMenuItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nameHint" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp" >

                <ImageView
                    android:id="@+id/ivItemImage"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_new" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.11" >

                    <ScrollView
                        android:id="@+id/scrollView1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_weight="0.17" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/tvItemDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.17"
                                android:text="Item Description"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                        </LinearLayout>
                    </ScrollView>

                </RelativeLayout>

                
                </LinearLayout>

            <Button
                android:id="@+id/bAddIng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.02"
                android:text="@string/addAIngredient" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="264dp"
                android:layout_weight="0.36" >

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:divider="?android:dividerHorizontal"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:showDividers="middle" >
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/bCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/bNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/next" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
 
</FrameLayout>