<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="Session Id"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvSessionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="XXXXXX"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="Table Num"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvTableNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CURRENT ORDER"
        android:textAppearance="?android:attr/textAppearanceLarge" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="302dp" >

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:divider="?android:dividerHorizontal"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:showDividers="middle" >
                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1.72" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvOrderComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.17"
                        android:text="Item Description"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutTO2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bBackToMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.23"
                android:text="@string/menu" />

            <TextView
                android:id="@+id/tvTotalCost"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/totalCost"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/bOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:onClick="onClick_orderButton"
                android:text="@string/order" />

        </LinearLayout>
    
    </LinearLayout>
